oxiplate-derive/tests/config/expected/missing-value.stderr
error: Failed to parse `/oxiplate.toml`: Boolean or string value expected after `=`
 --> tests/broken/missing-value.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
